--- a/AdventOfCode.Tests/AdventOfCode.Test.csproj
+++ b/AdventOfCode.Tests/AdventOfCode.Test.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day10Tests.cs" />
+    <Compile Include="Day4Tests.cs" />
     <Compile Include="Day3Tests.cs" />
     <Compile Include="Day2Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
