--- a/AdventOfCode.Tests/AdventOfCode.Test.csproj
+++ b/AdventOfCode.Tests/AdventOfCode.Test.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day10Tests.cs" />
+    <Compile Include="Day5Tests.cs" />
     <Compile Include="Day4Tests.cs" />
     <Compile Include="Day3Tests.cs" />
     <Compile Include="Day2Tests.cs" />
